<?xml version="1.0"?>
<package format="2">
  <name>create2remix</name>
  <version>0.0.1</version>
  <description>The create2remix package</description>
  <maintainer email="shuhao@shuhaowu.com">Shuhao Wu</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
