<?xml version="1.0"?>
<package format="2">
  <name>create2remix</name>
  <version>0.0.1</version>
  <description>The create2remix package</description>
  <maintainer email="shuhao@shuhaowu.com">Shuhao Wu</maintainer>
  <license>GPLv3</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
